# automata-redis

./: README.md  setup.cfg
cache/holder/: RedisCacheHolder.py
cache/provider/: RedisCacheProvider.py  RedisCacheProviderWithHash.py  RedisCacheProviderWithTimeSeries.py
provider/: RedisCacheProvider.py
tests/cache/holder/: RedisCacheHolder_test.py
tests/cache/provider/: RedisCacheProviderWithHash_test.py  RedisCacheProviderWithTimeSeries_test.py  RedisCacheProvider_test.py
tests/cache/utility/: BigFloat_utility_test.py
tests/provider/: RedisCacheProvider_test.py
