[metadata]
name = automata.redis
version = 0.0.1
description = Automata Redis

[options]
packages = find:
install_requires =
    automata.core==0.0.3
    automata.utilities==0.0.2
    redis==3.5.3
    redistimeseries==1.4.5

[options.packages.find]
include = redis*
exclude =
    tests
    simulations
